# order-backend-rust

./: .dockerignore  .env  .env.production  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.1.builder  Dockerfile.2.builder  Dockerfile.3.builder  Dockerfile.back  Dockerfile.builder  README.md  appspec.yml  base.Dockerfile  buildspec.yml  cargo-build.Dockerfile  cargo-run.Dockerfile  config.code-workspace  dev.Dockerfile  docker-compose.1.yml  docker-compose.yml  docker_push.sh  ecr.run.Dockerfile  env-example  postgresql.conf  run.sh  test.http  배포.txt  할것.txt
migrations/2019-05-09-041851_create_user/: up.sql
migrations/2019-05-17-045730_create_init/: down.sql  up.sql
migrations/2019-08-21-185005_create_order/: down.sql  up.sql
migrations/2019-09-08-025537_create_fcm/: down.sql  up.sql
migrations/2019-09-14-120709_batch_funtion/: down.sql  up.sql
myapp/: smaple.Dockerfile
myapp/src/: main.rs
scripts/: blue-green.sh  deploy-after-install.sh  deploy-before-install.sh  docker-compose.blue.yml  docker-compose.green.yml  docker-entrypoint_dev.sh  docker-entrypoint_op.sh  docker-run.sh
src/: main.rs  schema.rs
src/api/v1/: mod.rs
src/batch/: handler.rs  mod.rs  model.rs
src/config/: mod.rs
src/config/ceo/: v1.rs
src/config/user/: v1.rs
src/errors/: mod.rs
src/fcm/: handler.rs  mod.rs  model.rs  router copy.rs  router.rs
src/middleware/: auth.rs  authorization.rs  mod.rs
src/model/: db.rs  mod.rs  msg.rs  option.rs  ws.rs
src/models/: device.rs  fcm.rs  mod.rs  msg.rs  option.rs  option_group.rs  order.rs  order_detail.rs  product.rs  shop.rs  ws.rs
src/svc/: mod.rs
src/svc/auth/: handler.rs  mod.rs  model.rs  router.rs
src/svc/errors/: mod.rs
src/svc/option/: handler.rs  model.rs  router.rs
src/svc/option_group/: handler.rs  model.rs  router.rs
src/svc/product/: handler.rs  model.rs  router.rs
src/svc/shop/: handler.rs  model.rs  router.rs
src/svc/valid/: handler.rs  model.rs  (+1 more)
src/utils/: client.rs  jwt.rs  mod.rs  validator.rs
(+41 files in other folders)
