[package]
name = "order-back-rust"
version = "0.1.0"
authors = ["cg <rb7480@naver.com>"]
edition = "2018"

[dependencies]
actix = "0.8.1"
actix-web = "1.0.0-beta.3"
futures = "0.1.26"
diesel = { version = "1.4.2", features = ["postgres","r2d2"] }
dotenv = "0.9.0"
env_logger = "0.6.1"
r2d2 = "0.8.4"

jsonwebtoken = "6"
serde_derive = "1"
serde = "1"
serde_json = "1.0"

regex = "1.1.6"
lazy_static = "1.3.0"
