[package]
name = "order-backend-rust"
version = "0.1.0"
authors = ["cg <rb7480@naver.com>"]
edition = "2018"
[dependencies]
futures = "0.1.28"
actix = "0.8.3"
actix-rt = "0.2.3"
actix-web = "1.0.3"
actix_derive = "0.4.0"
actix-service = "0.4.1"
actix-http = "0.2.5"
actix-web-actors = "1.0.1"
actix-cors = "0.1.0"
diesel = { version = "1.4.2", features = ["postgres","r2d2","chrono","serde_json","uuid"] }
diesel_derives = "1.4.0"
dotenv = "0.14.1"
env_logger = "0.6.2"
r2d2 = "0.8.5"
uuid = { version = "0.6", features = ["serde", "v4"] }

jsonwebtoken = "6.0.1" 

serde_derive="1.0.94"
serde_json="1.0.40"
serde="1.0.94"

regex = "1.1.9"
lazy_static = "1.3.0"

derive_more = "0.15.0"
chrono = { version = "0.4.7", features = ["serde"] }
bcrypt = "0.5.0"
